<resources>
    <string name="appName">Café Analog</string>
    <string name="welcomeHeader">Hello &amp; welcome!</string>
    <string name="welcomeText">This app can be used to buy coffee cards at Café Analog at ITU Copenhagen, and will help you keep tabs on our opening hours</string>
    <string name="registerANewAccount">Register a new account</string>
    <string name="signInToExistingAccount">Sign in to an existing account</string>
    <string name="or">Or</string>
    <string name="email">Email</string>
    <string name="continueText">Continue</string>
    <string name="noAccountYet">No account yet? Click to create one!</string>
    <string name="changeUser">Change user</string>
    <string name="forgotPin">I forgot my PIN</string>
    <string name="reportError">Report error</string>
    <string name="enterYourPin">Enter your pin</string>
    <string name="delete">Delete</string>
    <string name="enterValidEmail">Please enter a valid email</string>
    <string name="feedbackEmail">feedback@analogio.dk</string>
    <string name="errorReport">Error report</string>
    <string name="sendMail">Send mail…</string>
    <string name="feedbackEmailBody">Device: Android (%1$s)\nVersion: %2$s (%3$d)\n__________________\n\n\n</string>
    <string name="noEmailClientsInstalled">There are no email clients installed.</string>
    <string name="forgotYourPinHeader">Forgot your PIN?</string>
    <string name="forgotYourPinText">Please enter your email address. You will receive a mail that you will have to confirm.</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="level">Level</string>
    <string name="profileAt">\@</string>
    <string name="tickets">Tickets</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="brackets">[ ]</string>
    <string name="rank">Rank</string>
    <string name="month">Month</string>
    <string name="semester">Semester</string>
    <string name="all_time">All Time</string>
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>
    <string name="DKK">DKK %d,-</string>
</resources>
