<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/forgotPinHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotYourPinHeader"
        android:textAppearance="@style/LG"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotPinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPinHeader"
        android:layout_marginTop="8dp"
        android:text="@string/forgotYourPinText"
        android:textAppearance="@style/MD" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPinText"
        android:layout_marginTop="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,LabelFor" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailField"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textAppearance="@style/MD"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textAppearance="@style/MD"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</RelativeLayout>
