<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/analogLogo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/analog_logo" />

    <TextView
        android:id="@+id/welcomeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/analogLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/welcomeHeader"
        android:textAppearance="@style/XXL" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/welcomeText"
        android:textAppearance="@style/LG" />

    <Button
        android:id="@+id/registerButton"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeText"
        android:layout_marginTop="80dp"
        android:text="@string/registerANewAccount" />

    <LinearLayout
        android:id="@+id/orLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textAppearance="@style/XL" />

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorText" />

    </LinearLayout>

    <Button
        android:id="@+id/logInButton"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orLayout"
        android:text="@string/signInToExistingAccount" />

</RelativeLayout>
