<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <dk.analog.digitalclipcard.ui.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbarBackIconType="back"
        app:toolbarTitle="@string/register" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enterNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/enter_your_name"
                android:textAppearance="@style/LG" />

            <EditText
                android:id="@+id/enterNameField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:inputType="textPersonName|textCapWords"
                android:labelFor="@id/enterNameText" />

            <TextView
                android:id="@+id/enterEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/enter_your_email"
                android:textAppearance="@style/LG" />

            <EditText
                android:id="@+id/enterEmailField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:labelFor="@id/enterEmailText" />

            <TextView
                android:id="@+id/enterPinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/enterYourPin"
                android:textAppearance="@style/LG" />

            <EditText
                android:id="@+id/enterPinField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:inputType="numberPassword"
                android:labelFor="@id/enterPinText"
                android:maxLength="4" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/register" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>